--- a/default.css
+++ b/default.css
@@ -4,7 +4,10 @@ body {
 }
 
 img[align=left] {
-    margin: 1em 1em 1em 0;
+    margin: 0.5em 1em 0.5em 0;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #f5f5f5;
 }
 
 .header table {
